--- a/src/app/views/public/authentication/login/login.component.html
+++ b/src/app/views/public/authentication/login/login.component.html
@@ -55,16 +55,21 @@
           </li>
         </ul>
       </div>
-      <button
-        cButton
-        color="primary"
-        type="submit"
-        class="mt-3 px-sm-5 col-7 col-lg-5"
-        [disabled]="loginForm.invalid"
-      >
-        Sign in
-        <c-spinner color="info" size="sm" *ngIf="isLoading"></c-spinner>
-      </button>
+      <div class="d-flex justify-content-between">
+        <button
+          cButton
+          color="primary"
+          type="submit"
+          class="mt-3 px-sm-5 col-7 col-lg-5"
+          [disabled]="loginForm.invalid"
+        >
+          Sign in
+          <c-spinner color="info" size="sm" *ngIf="isLoading"></c-spinner>
+        </button>
+        <a class="align-self-center" routerLink="/forgot_password"
+          >Forgot Password?</a
+        >
+      </div>
     </form>
   </div>
   <div
