--- a/src/app/views/secure/branches/branches-edit/branch-edit.component.html
+++ b/src/app/views/secure/branches/branches-edit/branch-edit.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-center">
   <form
-    [formGroup]="addUserForm"
+    [formGroup]="editUserForm"
     (submit)="onFormSubmit()"
     class="mt-3 w-75"
     autocomplete="off"
@@ -23,15 +23,15 @@
             </button>
           </div>
           <div class="col-12 col-sm-auto order-0 order-sm-1">
-            <h2 class="text-center">Add Branch</h2>
+            <h2 class="text-center">Add User</h2>
           </div>
           <div class="col order-2 text-end">
             <app-loading-button
-              [disabled]="addUserForm.invalid"
-              [buttonText]="'Add Branch'"
-              [title]="'Click to add branch'"
+              [disabled]="editUserForm.invalid"
+              [buttonText]="'Edit Branch'"
+              [title]="'Click to edit branch'"
               [isLoading]="isLoading"
-              [loadingText]="'Adding branch...'"
+              [loadingText]="'Adding branch..'"
               [buttonIconClass]="'fas fa-check'"
             ></app-loading-button>
           </div>
