--- a/src/app/views/secure/branches/branches-list/branches-list.component.html
+++ b/src/app/views/secure/branches/branches-list/branches-list.component.html
@@ -1,1 +1,91 @@
-<p>branches-list works!</p>
+<div class="mb-4">
+  <button cButton variant="outline" color="info" routerLink="/branch/add">
+    Add Branch
+  </button>
+</div>
+
+<div class="table-responsive">
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col" class="curser-pointer">
+          S.No
+          <i class="text-info bi"></i>
+        </th>
+        <th scope="col" class="curser-pointer">
+          Name
+          <i class="text-info bi"></i>
+        </th>
+        <th scope="col" class="curser-pointer">
+          Address
+          <i class="text-info bi"></i>
+        </th>
+        <th scope="col" class="curser-pointer">
+          DL Type
+          <i class="text-info bi"></i>
+        </th>
+        <!-- <th scope="col" class="curser-pointer">
+          DistrictId
+          <i class="text-info bi"></i>
+        </th> -->
+        <th scope="col" class="curser-pointer">
+          District Name
+          <i class="text-info bi"></i>
+        </th>
+        <!-- <th scope="col" class="curser-pointer">
+          CreatedAt
+          <i class="text-info bi"></i>
+        </th>
+        <th scope="col" class="curser-pointer">
+          UpdatedAt
+          <i class="text-info bi"></i>
+        </th> -->
+        <th scope="col" class="curser-pointer">
+          Actions
+          <i class="text-info bi"></i>
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="bg-white" *ngFor="let branch of branches">
+        <td>
+          <div class="d-flex gap-2">
+            <td>{{ branch.id }}</td>
+          </div>
+        </td>
+        <td>{{ branch.name }}</td>
+        <td>{{ branch.address ? branch.address : '-'}}</td>
+        <td>{{ branch.dl_type }}</td>
+        <!-- <td>{{ branch.district_id }}</td> -->
+        <td>{{ branch.district_name }}</td>
+        <!-- <td>{{ branch.created_at }}</td>
+        <td>{{ branch.updated_at }}</td> -->
+        <td>
+          <div class="d-flex gap-3">
+            <div
+              class="bg-edit opacity-75 rounded-circle px-2 py-1 text-white fw-bolder curser-pointer"
+              (click)="onEdit(branch.id)"
+            >
+              <svg cIcon name="cilPencil" size="md" title="Edit Icon"></svg>
+            </div>
+            <div
+              class="bg-delete opacity-75 rounded-circle px-2 py-1 text-white fw-bolder curser-pointer"
+              (click)="onDelete(branch)"
+            >
+              <svg cIcon name="cilTrash" size="md" title="Delete Icon"></svg>
+            </div>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+<div class="d-flex justify-content-around" *ngIf="branches?.length">
+  <app-pagination
+    class="mx-auto my-3"
+    [pagination]="pagination"
+    (pageChange)="onPageChange($event)"
+  >
+  </app-pagination>
+</div>
