--- a/src/app/views/secure/branches/branches-edit/branch-edit.component.html
+++ b/src/app/views/secure/branches/branches-edit/branch-edit.component.html
@@ -23,7 +23,7 @@
             </button>
           </div>
           <div class="col-12 col-sm-auto order-0 order-sm-1">
-            <h2 class="text-center">Add User</h2>
+            <h2 class="text-center">Edit Branch</h2>
           </div>
           <div class="col order-2 text-end">
             <app-loading-button
