--- a/src/app/views/public/authentication/change-password/change-password.component.html
+++ b/src/app/views/public/authentication/change-password/change-password.component.html
@@ -1,4 +1,4 @@
-<div class="card-cont d-flex justify-content-center align-items-center">
+<div class="card-cont d-flex justify-content-center align-items-center mt-5">
   <div class="card w-50 p-3">
     <h3 class="text-center">Change Password</h3>
     <div class="alert alert-warning mt-1" *ngIf="hasValidationError">
