--- a/src/app/views/public/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/views/public/authentication/forgot-password/forgot-password.component.html
@@ -9,8 +9,7 @@
       >
         <h2 class="text-center font-weight-bold">Forgot Password</h2>
         <p class="text-center">
-          (To receive a link to reset your password, please enter your email
-          address.)
+          (To receive a temporary password please enter your email address.)
         </p>
         <div class="form-group">
           <div class="controls">
@@ -44,13 +43,11 @@
           <app-loading-button
             [isLoading]="isLoading"
             [disabled]="forgotPasswordForm.invalid"
-            [loadingText]="'Sending link'"
-            [title]="'Click to send the forgot password link'"
+            [loadingText]="'Generating password'"
+            [title]="'Click to send a temporary password to your email'"
             [buttonIconClass]="'fas fa-paper-plane'"
             [buttonText]="
-              lastUsedEmailId === email?.value
-                ? 'Resend reset link'
-                : 'Send reset link'
+              lastUsedEmailId === email?.value ? 'Generate Again' : 'Generate'
             "
           >
           </app-loading-button>
