--- a/src/app/views/secure/branches/branches-list/branches-list.component.html
+++ b/src/app/views/secure/branches/branches-list/branches-list.component.html
@@ -6,7 +6,7 @@
 
 <div class="table-responsive">
   <table class="table table-hover">
-    <thead>
+    <thead class="bg-secondary">
       <tr>
         <th scope="col" class="curser-pointer">
           S.No
@@ -54,7 +54,7 @@
           </div>
         </td>
         <td>{{ branch.name }}</td>
-        <td>{{ branch.address ? branch.address : '-'}}</td>
+        <td>{{ branch.address ? branch.address : "-" }}</td>
         <td>{{ branch.dl_type }}</td>
         <!-- <td>{{ branch.district_id }}</td> -->
         <td>{{ branch.district_name }}</td>
