--- a/src/app/views/secure/branches/branches-list/branches-list.component.html
+++ b/src/app/views/secure/branches/branches-list/branches-list.component.html
@@ -4,7 +4,7 @@
   </button>
 </div>
 
-<div class="table-responsive">
+<div class="table-responsive" *ngIf="!isLoading && branches?.length">
   <table class="table table-hover">
     <thead class="bg-secondary">
       <tr>
@@ -80,6 +80,14 @@
     </tbody>
   </table>
 </div>
+
+<div class="d-flex justify-content-center mt-5">
+  <div class="spinner-border" role="status" *ngIf="isLoading">
+  </div>
+  <h5 class="text-center mt-5" *ngIf="!isLoading && !branches?.length">
+    No list found
+  </h5>
+</div> 
 
 <div class="d-flex justify-content-around" *ngIf="branches?.length">
   <app-pagination
