--- a/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
+++ b/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
@@ -1,4 +1,4 @@
-<div class="table-responsive">
+<div class="table-responsive" *ngIf="!isLoading && poList.length">
     <table class="table table-hover">
       <thead class="bg-secondary">
         <tr>
@@ -77,8 +77,16 @@
         </tr>
       </tbody>
     </table>
+</div>
+
+<div class="d-flex justify-content-center mt-5">
+  <div class="spinner-border" role="status" *ngIf="isLoading">
   </div>
-  
+  <h5 class="text-center mt-5" *ngIf="!isLoading && !poList.length">
+    No list found
+  </h5>
+</div> 
+
   <div class="d-flex" *ngIf="poList?.length">
     <app-pagination
       class="mx-auto my-3"
@@ -86,3 +94,5 @@
       (pageChange)="onPageChange($event)"
     ></app-pagination>
   </div>
+
+  
