--- a/src/app/views/secure/users/users-list/users-list.component.html
+++ b/src/app/views/secure/users/users-list/users-list.component.html
@@ -3,7 +3,7 @@
     Add User
   </button>
 </div>
-<div class="table-responsive">
+<div class="table-responsive" *ngIf="!isLoading && users?.length">
   <table class="table table-hover">
     <thead class="bg-secondary">
       <tr>
@@ -74,6 +74,14 @@
     </tbody>
   </table>
 </div>
+
+<div class="d-flex justify-content-center mt-5">
+  <div class="spinner-border" role="status" *ngIf="isLoading">
+  </div>
+  <h5 class="text-center mt-5" *ngIf="!isLoading && !users?.length">
+    No list found
+  </h5>
+</div> 
 
 <div class="d-flex" *ngIf="users?.length">
   <app-pagination
