Feat: PO-List | PO-View | Material-view | Distribution-list

--- a/src/app/containers/default-header/default-header.component.html
+++ b/src/app/containers/default-header/default-header.component.html
@@ -6,13 +6,13 @@
     <c-header-brand class="d-sm-none" routerLink="/">DRS</c-header-brand>
     <ul class="header-nav me-auto ms-5">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="/purchase_orders">Purchase Orders</a>
+        <a class="nav-link" routerLink="/purchase_orders" routerLinkActive="active">Purchase Orders</a>
       </li>
       <li class="nav-item active ms-4">
-        <a class="nav-link" routerLink="/users">Users</a>
+        <a class="nav-link" routerLink="/users" routerLinkActive="active">Users</a>
       </li>
       <li class="nav-item ms-4">
-        <a class="nav-link" routerLink="/branches">Branches</a>
+        <a class="nav-link" routerLink="/branches" routerLinkActive="active">Branches</a>
       </li>
     </ul>
     <c-header-nav>
