--- a/src/app/views/secure/users/users-add/users-add.component.html
+++ b/src/app/views/secure/users/users-add/users-add.component.html
@@ -157,7 +157,7 @@
           </div>
           <div class="form-group col-12 col-md-6 mt-4">
             <label for="branch"
-              >Branch ID <span class="text-danger">*</span></label
+              >Branch Name <span class="text-danger">*</span></label
             >
             <ng-select
               [items]="branchesList"
