--- a/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
+++ b/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
@@ -2,7 +2,7 @@
 <div class="table-responsive" *ngIf="!isLoading && poList.length">
   <table class="table table-hover">
     <thead class="bg-secondary">
-      <tr>
+      <tr class="text-center">
         <th scope="col">
           S No
           <i class="text-info bi"></i>
@@ -37,7 +37,6 @@
       <tr class="bg-white text-center" *ngFor="let po of poList; let i = index">
         <td>{{ i + index }}</td>
         <td>{{ po.po_no }}</td>
-        <td>{{ po.id }}</td>
         <td>{{ po.po_date | date : "short" }}</td>
         <td>{{ po.status }}</td>
         <td>{{ po.godown ? po.godown : "-" }}</td>
@@ -47,7 +46,7 @@
         <td>{{ po.order_year }}</td>
         <td>{{ po.target_date | date : "short" }}</td>
         <td>
-          <div class="d-flex gap-3">
+          <div class="d-flex gap-3 justify-content-center">
             <button
               class="btn-view opacity-75 rounded-circle px-2 py-1 text-white fw-bolder curser-pointer view-button"
               (click)="onView(po.id)"
