--- a/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.scss
+++ b/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.scss
@@ -22,3 +22,13 @@
 .view-button {
   border: none;
 }
+
+select {
+  font-size: 16px; 
+  padding: 4px; 
+  border-radius: 4px; 
+  border: 1px solid #ccc; 
+  background-color: #fff;
+  color: #333; 
+  cursor: pointer;
+}
