--- a/src/app/views/secure/branches/branches-list/branches-list.component.html
+++ b/src/app/views/secure/branches/branches-list/branches-list.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="table-responsive" *ngIf="!isLoading && branches?.length">
-  <table class="table table-hover">
+  <table class="table table-hover text-center">
     <thead class="bg-secondary">
       <tr>
         <th scope="col" class="curser-pointer">
@@ -47,12 +47,8 @@
       </tr>
     </thead>
     <tbody>
-      <tr class="bg-white" *ngFor="let branch of branches">
-        <td>
-          <div class="d-flex gap-2">
-            <td>{{ branch.id }}</td>
-          </div>
-        </td>
+      <tr class="bg-white" *ngFor="let branch of branches; let i=index">
+        <td>{{ serialNo + i }}</td>
         <td>{{ branch.name }}</td>
         <td>{{ branch.address ? branch.address : "-" }}</td>
         <td>{{ branch.dl_type }}</td>
@@ -61,7 +57,7 @@
         <!-- <td>{{ branch.created_at }}</td>
         <td>{{ branch.updated_at }}</td> -->
         <td>
-          <div class="d-flex gap-3">
+          <div class="d-flex gap-3 justify-content-center">
             <div
               class="bg-edit opacity-75 rounded-circle px-2 py-1 text-white fw-bolder curser-pointer"
               (click)="onEdit(branch.id)"
