--- a/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
+++ b/src/app/views/secure/purchase-orders/purchase-orders-list/purchase-orders-list.component.html
@@ -1,82 +1,70 @@
 <h3 class="mb-3">Purchase Orders</h3>
-<div class="table-responsive" *ngIf="!isLoading && poList.length">
-  <table class="table table-hover">
+<div class="input-group w-25 mb-3">
+  <input
+    type="text"
+    class="form-control"
+    placeholder="Search"
+    [(ngModel)]="searchKeyWord"
+    (ngModelChange)="this.onSearchKeyWordChange.next($event)"
+  />
+  <button class="btn btn-secondary" type="button">
+    <i class="fa fa-search"></i>
+  </button>
+</div>
+<div class="table-responsive">
+  <table class="table table-hover  text-center">
     <thead class="bg-secondary">
       <tr>
+        <th scope="col">S No</th>
+        <th scope="col">PO No</th>
+        <th scope="col">PO Date</th>
         <th scope="col">
-          S No
-          <i class="text-info bi"></i>
+          Status:
+          <select [(ngModel)]="selectedPOStatus" (change)="onFilterPOStatus()">
+            <option value="All">All</option>
+            <option value="none">None</option>
+            <option value="partial">Partial</option>
+            <option value="completed">Completed</option>
+          </select>
         </th>
+        <th scope="col">Vendor Name</th>
+        <th scope="col">PO days</th>
+        <th scope="col">Order Year</th>
 
-        <th scope="col">
-          PO No
-          <i class="text-info bi"></i>
-        </th>
-        <th scope="col">
-          PO Date
-          <i class="text-info bi"></i>
-        </th>
-        <th scope="col">
-          Status
-          <i class="text-info bi"></i>
-        </th>
-        <th scope="col">
-          Godown
-          <i class="text-info bi"></i>
-        </th>
-        <th scope="col">Region<i class="text-info bi"></i></th>
-        <th scope="col">Vendor Name<i class="text-info bi"></i></th>
-        <th scope="col">PO days<i class="text-info bi"></i></th>
-        <th scope="col">Order Year<i class="text-info bi"></i></th>
-
-        <th scope="col">Target date<i class="text-info bi"></i></th>
+        <th scope="col">Target date</th>
         <th scope="col">Actions</th>
       </tr>
     </thead>
-    <tbody>
-      <tr class="bg-white" *ngFor="let po of poList">
+    <tbody *ngIf="!isLoading && poList.length">
+      <tr class="bg-white" *ngFor="let po of poList; let i = index">
+        <td>{{ i + serialNo }}</td>
         <td>{{ po.po_no }}</td>
-        <td>{{ po.id }}</td>
         <td>{{ po.po_date | date : "short" }}</td>
         <td>{{ po.status }}</td>
-        <td>{{ po.godown ? po.godown : "-" }}</td>
-        <td>{{ po.region ? po.region : "-" }}</td>
         <td>{{ po.vendor_name }}</td>
         <td>{{ po.po_days }}</td>
         <td>{{ po.order_year }}</td>
         <td>{{ po.target_date | date : "short" }}</td>
         <td>
-          <div class="d-flex gap-3">
+          <div class="d-flex gap-3 justify-content-center">
             <button
               class="btn-view opacity-75 rounded-circle px-2 py-1 text-white fw-bolder curser-pointer view-button"
               (click)="onView(po.id)"
             >
               <i class="bi bi-eye-fill"></i>
             </button>
-            <!-- <div
-                class="bg-edit opacity-75 rounded-circle px-2 py-1 text-white fw-bolder curser-pointer"
-                (click)="onEdit(user.id)"
-              >
-                <svg cIcon name="cilPencil" size="md" title="Edit Icon"></svg>
-              </div>
-              <div
-                class="bg-delete opacity-75 rounded-circle px-2 py-1 text-white fw-bolder curser-pointer"
-                (click)="onDelete(user)"
-              >
-                <svg cIcon name="cilTrash" size="md" title="Delete Icon"></svg>
-              </div> -->
           </div>
         </td>
       </tr>
     </tbody>
   </table>
 </div>
+<h5 class="text-center m-auto w-100" *ngIf="poList.length === 0">
+  No data found
+</h5>
 
 <div class="d-flex justify-content-center mt-5">
   <div class="spinner-border" role="status" *ngIf="isLoading"></div>
-  <h5 class="text-center mt-5" *ngIf="!isLoading && !poList.length">
-    No list found
-  </h5>
 </div>
 
 <div class="d-flex" *ngIf="poList?.length">
