--- a/src/app/views/secure/users/users-list/users-list.component.html
+++ b/src/app/views/secure/users/users-list/users-list.component.html
@@ -4,11 +4,11 @@
   </button>
 </div>
 <div class="table-responsive" *ngIf="!isLoading && users?.length">
-  <table class="table table-hover">
+  <table class="table table-hover text-center">
     <thead class="bg-secondary">
       <tr>
         <th scope="col" class="curser-pointer">
-          Id
+          S No
           <i class="text-info bi"></i>
         </th>
         <th scope="col" class="curser-pointer">
@@ -37,8 +37,8 @@
       </tr>
     </thead>
     <tbody>
-      <tr class="bg-white" *ngFor="let user of users">
-        <td>{{ user.id }}</td>
+      <tr class="bg-white" *ngFor="let user of users; let i = index">
+        <td>{{ i + serialNo }}</td>
         <td>
           {{ user.first_name }} {{ user.last_name ? user.last_name : "" }}
         </td>
@@ -49,7 +49,7 @@
         <!-- <td>{{ user.created_at | date : "short" }}</td>
         <td>{{ user.updated_at | date : "short" }}</td> -->
         <td>
-          <div class="d-flex gap-3">
+          <div class="d-flex gap-3 justify-content-center">
             <!-- <div
               class="btn-view opacity-75 rounded-circle px-2 py-1 text-white fw-bolder curser-pointer"
               (click)="onView(user.email)"
