Added password regex pattern

--- a/src/app/views/public/authentication/change-password/change-password.component.html
+++ b/src/app/views/public/authentication/change-password/change-password.component.html
@@ -57,11 +57,6 @@
                 >Current password is required</small
               >
             </div>
-            <div *ngIf="formControls['currentPassword'].errors?.['minlength']">
-              <small class="text-danger"
-                >Password must be 6 characters long</small
-              >
-            </div>
           </div>
           <div class="form-group mt-3">
             <label for="newPassword">New Password</label>
@@ -105,12 +100,17 @@
               >
               <small
                 class="text-danger"
-                *ngIf="
-                        formControls['newPassword'].errors?.['minlength'];
-                        else passwordError
-                      "
-                >New password must be 6 characters long</small
+                *ngIf="formControls['newPassword'].errors?.['password']; else characterLengthCheck"
               >
+                {{ formControls['newPassword'].errors?.['password'].errorMessage }}</small
+              >
+              <ng-template #characterLengthCheck>
+                <small
+                  class="text-danger"
+                  *ngIf="formControls['newPassword'].errors?.['minlength']"
+                  >New password must be 6 characters long</small
+                >
+              </ng-template>
               <ng-template #passwordError>
                 <div *ngIf="formControls['newPassword'].errors?.['password']">
                   <small class="text-danger"
