--- a/src/app/views/public/authentication/login/login.component.html
+++ b/src/app/views/public/authentication/login/login.component.html
@@ -28,14 +28,26 @@
       </div>
       <div class="mb-2 mt-4">
         <label for="password" class="form-label">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          id="password"
-          formControlName="password"
-          placeholder="password"
-          autocomplete="current-password"
-        />
+        <div class="d-flex">
+          <input
+            [type]="isShowPassword ? 'password' : 'text'"
+            class="form-control input-border-radius"
+            id="password"
+            formControlName="password"
+            placeholder="Password"
+            autocomplete="current-password"
+          />
+          <div class="input-group-append">
+            <i
+              class="input-group-text fa h-100 d-flex justify-content-center align-items-center icon-border-radius"
+              [ngClass]="isShowPassword ? 'fa-eye-slash' : 'fa-eye'"
+              (click)="changePasswordInput()"
+              aria-hidden="true"
+              data-toggle="tooltip"
+              [title]="isShowPassword ? 'Hide password' : 'Show password'"
+            ></i>
+          </div>
+        </div>
       </div>
       <div
         *ngIf="
@@ -55,12 +67,12 @@
           </li>
         </ul>
       </div>
-      <div class="d-flex justify-content-between">
+      <div class="mt-4 d-flex justify-content-between align-items-center">
         <button
           cButton
           color="primary"
           type="submit"
-          class="mt-3 px-sm-5 col-7 col-lg-5"
+          class="col-7 col-lg-5"
           [disabled]="loginForm.invalid"
         >
           Sign in
